[gd_scene load_steps=3 format=3 uid="uid://dpaqh1pxbc4mn"]

[ext_resource type="Script" path="res://Scripts/menu_mejoras.gd" id="1_w74k2"]
[ext_resource type="Texture2D" uid="uid://du7g5ux7ey8l8" path="res://icon.svg" id="2_t37by"]

[node name="MenuMejoras" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_w74k2")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -747.0
offset_top = 261.0
offset_right = -418.0
offset_bottom = 569.0
scale = Vector2(1.29136, 1.24349)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_t37by")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.21
anchor_bottom = 0.148
offset_right = -13.09
offset_bottom = 0.416

[node name="MasDa単o" type="Button" parent="TextureRect/Label"]
layout_mode = 1
offset_left = 74.0
offset_top = 31.0
offset_right = 243.0
offset_bottom = 96.0
text = "Mas Da単o"

[node name="MasVelocidad" type="Button" parent="TextureRect/Label"]
layout_mode = 0
offset_left = 74.0
offset_top = 195.0
offset_right = 243.0
offset_bottom = 253.0
text = "Mas Velocidad"

[node name="MasVida" type="Button" parent="TextureRect/Label"]
layout_mode = 0
offset_left = 74.0
offset_top = 111.0
offset_right = 243.0
offset_bottom = 171.0
text = "Mas Vida"

[node name="Mate" type="Button" parent="TextureRect/Label"]
layout_mode = 0
offset_left = 267.935
offset_top = 110.978
offset_right = 436.935
offset_bottom = 162.978
text = "Mate"

[node name="Marker1" type="Marker2D" parent="TextureRect"]
position = Vector2(74.3402, 31.3633)

[node name="Marker2" type="Marker2D" parent="TextureRect"]
position = Vector2(74.3402, 110.978)

[node name="Marker3" type="Marker2D" parent="TextureRect"]
position = Vector2(74.3402, 194.614)

[connection signal="button_up" from="TextureRect/Label/MasDa単o" to="." method="_on_mas_da単o_button_up"]
[connection signal="button_up" from="TextureRect/Label/MasVelocidad" to="." method="_on_mas_velocidad_button_up"]
[connection signal="button_up" from="TextureRect/Label/MasVida" to="." method="_on_mas_vida_button_up"]
[connection signal="button_up" from="TextureRect/Label/Mate" to="." method="_on_mate_button_up"]
